--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://gannonsmith.github.io",
   "private": true,
   "dependencies": {
+    "@mui/material": "^5.15.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
