--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "name": "gannonsmith.github.io",
   "version": "0.1.0",
   "private": true,
@@ -9,13 +14,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.1.19",
-    "next": "14.2.8",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "framer-motion": "^12.18.1",
+    "gray-matter": "^4.0.3",
+    "next": "^14.2.30",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^10.1.0",
+    "react-tsparticles": "^2.12.2",
+    "react-typed": "^2.0.12",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
